fix proile alignment

--- a/front/src/pages/Profile/css/UserProfile.scss
+++ b/front/src/pages/Profile/css/UserProfile.scss
@@ -123,7 +123,7 @@ $png-background-color: rgba(250, 250, 250, 1);
         justify-content: space-evenly;
         text-align: left;
         width: 150px;
-        padding: 20px 0px 0px 20px;
+        // padding: 20px 0px 0px 20px;
 
         @mixin data-fields-name-sub {
           font-family: "dune", Arial, sans-serif;
@@ -154,7 +154,7 @@ $png-background-color: rgba(250, 250, 250, 1);
         flex-direction: column;
         justify-content: space-evenly;
         text-align: left;
-        width: 70%;
+        // width: 70%;
 
         @mixin data-values-sub {
           overflow: hidden;
@@ -175,7 +175,7 @@ $png-background-color: rgba(250, 250, 250, 1);
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        gap:10px;
+        gap: 10px;
         text-align: left;
         
         @mixin data-values-input-sub {
@@ -190,19 +190,18 @@ $png-background-color: rgba(250, 250, 250, 1);
           @include data-values-input-sub;
           width: 100%;
           height: 33px;
-          padding-top: 10px;
+          padding-top: 5px;
+          padding-bottom: 0px;
         }
         
         .data-values-input-sub-second {
           width: 100%;
           height: 33px;
-          padding-top: 10px;
         }
         
         .data-values-input-sub-others {
           width: 100%;
           height: 33px;
-          padding-top: 10px;
         }
       }
 
@@ -229,6 +228,7 @@ $png-background-color: rgba(250, 250, 250, 1);
       }
         .activate-deactivate-button,
         .deactivate {
+          min-width: 200px;
           display: flex;
           justify-content: left;
           margin-top: 10px;
